# AutoCogni

./: .env  pyproject.toml
app/: agent.py  main.py  schemas.py
app/api/: routes.py
app/computer_agent/: api_client.py  cli.py  os_tools.py  playwright_tools.py  task.json
app/core/: graph.py  memory.py  models.py
app/services/: agent_service.py  model_service.py
computer_use.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
